adds 1 more button open ipos also changes the ui design 3ipos in a row formate

--- a/config.yaml
+++ b/config.yaml
@@ -5,10 +5,10 @@ sites:
   - name: "NSE India (National Stock Exchange)"
     url: "https://www.nseindia.com/"
   - name: "BSE India"
-    url: "https://www.bseindia.com/"
+    url: "https://www.bseindia.com/?"
   - name: "Chittorgarh IPO"
-    url: "https://www.chittorgarh.com/report/ipo-in-india-list-main-board-sme/82/"
+    url: "https://www.chittorgarh.com/"
   - name: "IPO Watch"
-    url: "https://ipowatch.in/ipo/"
+    url: "https://ipowatch.in/ipo-grey-market-premium-latest-ipo-gmp/"
   - name: "Investorgain"
-    url: "https://www.investorgain.com/ipo/"
+    url: "https://www.investorgain.com/report/live-ipo-gmp/331/"
