Scrolling fixed and added AI Logic Working Fine

--- a/config.yaml
+++ b/config.yaml
@@ -5,10 +5,18 @@ sites:
   - name: "NSE India (National Stock Exchange)"
     url: "https://www.nseindia.com/"
   - name: "BSE India"
-    url: "https://www.bseindia.com/?"
+    url: "https://www.bseindia.com/"
   - name: "Chittorgarh IPO"
-    url: "https://www.chittorgarh.com/"
+    url: "https://www.chittorgarh.com/report/ipo-in-india-list-main-board-sme/82/"
+  - name: "Chittorgarh Open IPOs"
+    url: "https://www.chittorgarh.com/report/ipo-in-india-open-for-subscription/89/"
+  - name: "Chittorgarh Listed"
+    url: "https://www.chittorgarh.com/report/ipo-in-india-list-main-board-sme/82/"
   - name: "IPO Watch"
-    url: "https://ipowatch.in/ipo-grey-market-premium-latest-ipo-gmp/"
+    url: "https://ipowatch.in/ipo/"
+  - name: "IPO Watch Open"
+    url: "https://ipowatch.in/open-ipo/"
   - name: "Investorgain"
-    url: "https://www.investorgain.com/report/live-ipo-gmp/331/"
+    url: "https://www.investorgain.com/ipo/"
+  - name: "Investorgain Open"
+    url: "https://www.investorgain.com/ipo/open/"
